fixed inks and spacing

--- a/fixer.css
+++ b/fixer.css
@@ -69,7 +69,7 @@ hr {
 
 button {
   color: #103874;
-  font-size: 20px;
+  font-size: 1em;
   border-radius: 9px;
   height: 2.5em;
   margin: 1em;
